backends/drm: reduce minimum luminance for SDR

The minimum luminance the Wayland protocol uses is 0.2cd/m², which is pretty high
for modern displays, and leads to colors close to black being much more distorted
towards red than expected.

This only affects displays without an ICC profile and in SDR mode.

BUG: 501247